--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -2,11 +2,8 @@ streamlit>=1.28.0
 gradio>=4.0.0
 pandas>=2.0.0
 numpy>=1.24.0
-scikit-learn==1.2.2
+scikit-learn>=1.3.0
 joblib>=1.3.0
 requests>=2.31.0
 plotly>=5.17.0
-xgboost>=2.0.0
-lightgbm>=4.0.0
-matplotlib>=3.7.0
 
